sample list using map function

--- a/list.html
+++ b/list.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div>create list</div>
-        <!-- <form id="form">
+        <form id="form">
             <ol>
                 <li>
                     <input type="text">
@@ -14,13 +14,11 @@
                 </li>
             </ol>
             <button type="submit">Submit List</button>
-        </form> -->
-        <form id="form">
-            <label>Test field: <input type="text" /></label>
-            <br /><br />
-            <button type="submit">Submit form</button>
         </form>
+
         <p id="log"></p>
+        <ul id="newList"></ul>
         <script src="list_functions.js"></script>
+        
     </body>
 </html>
